<resources>
    <string name="app_name">GranineaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_open">Abrir menú de navegación</string>
    <string name="nav_close">Cerrar menú de navegación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuarios">Usuarios</string>
    <string name="_0">0</string>
    <string name="pedidos_hoy">Pedidos hoy</string>
    <string name="_2">0</string>
    <string name="productos">Productos</string>
    <string name="_3">0</string>
    <string name="pedidos_pendientes">Pedidos pendientes</string>
    <string name="productos1">Productos</string>
    <string name="pedidos">Pedidos</string>
    <string name="usuarios1">Usuarios</string>
    <string name="mostrar_todos_los_pedidos1">Mostrar todos los pedidos</string>
    <string name="pedido_32">Pedido #32</string>
    <string name="cliente_adriana_guti_rrez">Cliente: Adriana Gutiérrez</string>
    <string name="productos_n_granizado_fresa_n_cantidad_2_precio_4_000_n_granizado_mango_n_cantidad_2_precio_6_000">Productos:\n• Granizado fresa\n Cantidad: 2 Precio: $4.000\n• Granizado mango\n Cantidad: 2 Precio: $6.000</string>
    <string name="total_18_000">Total: $18.000</string>
    <string name="marcar_como_entregado">Marcar como entregado</string>
    <string name="volver">Volver</string>
    <string name="usuarios_registrados">Usuarios registrados</string>
    <string name="volver2">Volver</string>
    <string name="todos_los_pedidos">Todos los pedidos</string>
    <string name="buscar_producto">Buscar producto...</string>
    <string name="productos_disponibles">Productos disponibles</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="editar_producto">Editar producto</string>
    <string name="agregar_producto2">Agregar producto</string>
    <string name="nombre">Nombre *</string>
    <string name="ej_granizado_de_fresa">Ej: Granizado de fresa</string>
    <string name="nuestros_productos">Nuestros productos</string>
    <string name="navigation_drawer_open">Menu Abierto</string>
    <string name="navigation_drawer_close">Menu Cerrado</string>
    <string name="graninea">GRANINEA</string>
    <string name="home">Home</string>
    <string name="catalogom">Catalogo</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nuestros_productosCTL">Nuestros productos</string>
    <string name="homeText">¡Bienvenido a Graninea El lugar donde los sabores se vuelven hielo y la fres¡Nuevo!Pulsar para editarcura nunca se acaba. Explora nuestros granizados, descubre nuevos sabores y disfruta cada sorbo. Estamos en Calle 130 C # 10A - 82 ¡Haz tu pedido y refréscate ahora!</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="bienvenida_home">Refrescamos tus momentos con el toque perfecto. Disfruta de granizados artesanales con o sin alcohol. Tú eliges el frío, nosotros el sabor.</string>
    <string name="boton_home">Comienza</string>
    <string name="registrate_home">Registrate</string>
    <string name="iniciar_sesion_login">Iniciar Sesion En Graninea</string>
    <string name="placeholder_correo">CORREO ELECTRONICO</string>
    <string name="placeholder_contrasena">CONTRASEÑA</string>
    <string name="boton_iniciar_sesion">Iniciar Sesion</string>
    <string name="restablecer_contra_login">Restablecer Contraseña</string>
    <string name="no_tienes_cuenta">¿No Tienes Cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="registrate">Registrate En Graninea</string>
    <string name="no_fue_posible">NO HA SIDO POSIBLE CREAR LA CUENTA, REVISE QUE TODOS LOS CAMPOS ESTAN COMPLETOS HE INTENTE NUEVAMENTE</string>
    <string name="exito_creacion">SU CUENTA FUE CREADA CORRECTAMENTE, POR FAVOR DELE AL BOTON VOLVER PARA QUE POSTERIORMENTE INICIE SESION</string>
    <string name="placeholder_np_registro">NOMBRE Y APELLIDO</string>
    <string name="placeholder_correo_registro">CORREO ELECTRONICO</string>
    <string name="placeholder_celular">NUMERO CELULAR</string>
    <string name="placeholder_contra_registro">CONTRASEÑA</string>
    <string name="boton_crear_cuenta_registro">Crear Cuenta</string>
    <string name="restablecer_contra1">Restablecer Contraseña</string>
    <string name="placeholder_correo_restablecer">CORREO ELECTRONICO</string>
    <string name="boton_enviar_restablecer">ENVIAR</string>
    <string name="restablecer_contra2">Restablecer Contraseña</string>
    <string name="placeholder_correo_restablecer_2">Correo electrónico</string>
    <string name="codigo_restablecer_2">Código de verificación</string>
    <string name="nueva_contra_restablecer2">Nueva contraseña</string>
    <string name="repetir_contra_restablecer2">Repetir contraseña</string>
    <string name="confirmar_boton_restablecer2">Confirmar</string>
    <string name="mi_carrito_fragment">Mi Carrito</string>
    <string name="total_carrito_fragment">Total:</string>
    <string name="valor_total_carrito">$ 0.00</string>
    <string name="boton_finalizar_pedido_carrito">FINALIZAR PEDIDO</string>
    <string name="hint_busqueda_catalogo">El neita</string>
    <string name="sin_licor_filter">sin licor</string>
    <string name="con_licor_filter">con licor</string>
    <string name="xl_filter">XL</string>
    <string name="fecha_detalle_pedido">22 De Enero 2026</string>
    <string name="pedido_tittle">Pedido</string>
    <string name="nombre_cliente_detalle_pedido">Cliente: Daniel Rodriguez</string>
    <string name="productos_pedido">Productos:</string>
    <string name="granizado_fresa">Granizado fresa</string>
    <string name="cantidad_2">Cantidad: 2</string>
    <string name="precio_producto_1">Precio: 24.000</string>
    <string name="producto2_pedido">Granizado mango</string>
    <string name="cantidad_producto_2">Cantidad: 3</string>
    <string name="precio_producto_dos">Precio: 45.000</string>
    <string name="total_pedido">Total: 69.000</string>
    <string name="volver_boton">Volver</string>
    <string name="imagen_del_producto_detalle">Imagen del producto</string>
    <string name="cerrar_detalle">Cerrar detalle</string>
    <string name="nombre_del_producto_detalle">Nombre del Producto</string>
    <string name="valor_producto">$ 0.00</string>
    <string name="descripcion_producto">Descripción aquí</string>
    <string name="elige_tu_sabor">Elige tu sabor</string>
    <string name="sabor1">Uva</string>
    <string name="sabor2">Maracumango</string>
    <string name="sabor3">Mango Biche</string>
    <string name="menos">Menos</string>
    <string name="cantidad_producto">1</string>
    <string name="mas">Más</string>
    <string name="boton_agregar_al_carrito">AGREGAR AL CARRITO</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="cambiar_contra">Cambiar Contraseña</string>
    <string name="historial_de_compras">Historial de Compras</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="cerrar">✕</string>
    <string name="historial_tittle">HISTORIAL</string>
    <string name="fecha1_historial">30 De Enero 2026</string>
    <string name="fecha2_historial">22 De Enero 2026</string>
    <string name="fecha3_historial">13 De Enero 2026</string>
    <string name="fecha4_historial">03 De Enero 2026</string>
    <string name="fecha5_historial">24 De Diciembre 2025</string>
    <string name="fecha6_historial">07 De Diciembre 2025</string>
    <string name="mostrar_mas_button">Mostrar Más</string>
    <string name="informacion_personal_fragment">Información Personal</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="correo_informacion_personal">Correo electrónico</string>
    <string name="numero_informacion_personal">Número celular</string>
    <string name="nombres">NOMBRES</string>
    <string name="apellidos">APELLIDOS</string>
    <string name="repetir_contrase_a">REPETIR CONTRASEÑA</string>
    <string name="nuevo_producto">NUEVO PRODUCTO</string>
    <string name="nombre_del_producto">Nombre del Producto *</string>
    <string name="crear_producto">Ej: Granizado de Fresa</string>
    <string name="descripcion">Descripción</string>
    <string name="descripcion_producto_admin">Breve descripción del sabor...</string>
    <string name="precio_producto_admin">Precio ($) *</string>
    <string name="precio_total_producto_admin">0.00</string>
    <string name="categoria_producto_admin">Categoría *</string>
    <string name="imagen_producto">Imagen del Producto</string>
    <string name="sabores_productos_admin">Sabores (separados por coma)</string>
    <string name="hint_sabores_admin">Ej: fresa, mango, uva</string>
    <string name="seleccionar_imagen_text">📷 SELECCIONAR IMAGEN</string>
    <string name="crear_producto_btn">CREAR PRODUCTO</string>
    <string name="editar_producto_admin">EDITAR PRODUCTO</string>
    <string name="nombre_producto_edit_admin">Nombre *</string>
    <string name="descripcion_producto_admin_edit">Descripción</string>
    <string name="precio_producto_edit_admin">Precio ($) *</string>
    <string name="categoria_producto_edit_admin">Categoría *</string>
    <string name="imagen_del_producto_edit_admin">Imagen del Producto</string>
    <string name="cambiar_imagen_edit_admin">📷 CAMBIAR IMAGEN</string>
    <string name="guardar_cambios_edit_admin">GUARDAR CAMBIOS</string>
    <string name="apellidos_informacion_personal">APELLIDOS</string>
    <string name="nombres_informacion_personal">NOMBRES</string>
    <string name="Correo_informacion_personal">CORREO</string>
    <string name="numero_celular_informacion_personal">NUMERO CELULAR</string>
    <string name="editar_perfil_informacion_personal">Editar Perfil</string>
    <string name="cambiar_foto">cambiar_foto</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="repetir_contraseña">REPETIR CONTRASEÑA</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="nombresl">Nombres *</string>
    <string name="ej_juan">Ej: Juan</string>
    <string name="apellidosl">Apellidos *</string>
    <string name="ej_p_rez">Ej: Pérez</string>
    <string name="correo_electr_nico">Correo electrónico *</string>
    <string name="ejemplo_correo_com">ejemplo@correo.com</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
</resources>