<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicio"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_today" />

    <item
        android:id="@+id/catalogoProductos"
        android:title="@string/catalogom"
        android:icon="@android:drawable/alert_dark_frame" />

    <item
        android:id="@+id/carritoCompras"
        android:title="@string/carrito_de_compras"
        android:icon="@android:drawable/btn_star_big_on" />

    <item
        android:id="@+id/miPerfil"
        android:title="@string/mi_perfil"
        android:icon="@android:drawable/bottom_bar" />
    <!-- ✅ NUEVO: Acceso al Panel Admin (solo visual/testing) -->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_admin"
            android:title="🔐 Panel Admin"
            android:icon="@android:drawable/ic_menu_manage" />
    </group>
</menu>