<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.inicio.HomeActivity">

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-50dp"
        app:srcCompat="@drawable/logo_graninea" />

    <View
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/Bienvenida_home"
        android:layout_width="337dp"
        android:layout_height="140dp"
        android:gravity="center_horizontal"
        android:text="@string/bienvenida_home"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/botonComienzaHome"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorverde_letra"
        android:text="@string/boton_home"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:cornerRadius="12dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/RegistrateHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/registrate_home"
        android:textColor="@color/colorverde_letra"
        android:textSize="14sp" />

</LinearLayout>